--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 				<div class="work">
 					<img src="images/work-3.png">
 					<div class="layer">
-						<h3>Snake</h3>
+						<h3>Tundra Environment</h3>
 						<p>
-							My first time exploring Python, I created the classic game Snake using PyGame. The code can be found on my GitHub, check it out!
+							The following is a render of my Tundra environment created in Unreal Engine 5
 						</p>
-						<a href="https://github.com/dom-smith/Snake"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://www.youtube.com/watch?v=GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 			</div>
