--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/work-3.png">
+					<img src="images/work-3.jpeg">
 					<div class="layer">
 						<h3>Tundra Environment</h3>
 						<p>
