--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<a href="https://www.linkedin.com/in/dominick-smith/"><i class="fa-brands fa-linkedin"></i></a>
 						<a href="https://github.com/dom-smith"><i class="fa-brands fa-github"></i></a>
 					</div>
-					<a href="files/Dominick Smith Resume.pdf" downlaod class="btn btn2">Download Resume</a>
+					<a href="files/DominickSmithResume.pdf" downlaod class="btn btn2">Download Resume</a>
 				</div>
 				<div class="contact-right">
 					<form name="submit-to-google-sheet">
