--- a/index.html
+++ b/index.html
@@ -85,15 +85,14 @@
 				<div class="work">
 					<img src="images/work-1.png">
 					<div class="layer">
-						<h3>Theme Park Walkthrough</h3>
+						<h3>Skunk Ape: Slaughter in the Swamp</h3>
 						<p>
-							Here is a Demo Walkthrough in Unreal Engine 5 of "Murder
-							on the Scottish Moors", a Victorian style murder-mystery
-							theme park land created for the Spring 2023 Design
-							Competition hosted by the Themed Entertainment Assosiation
-							at the University of Central Florida
+							Current work in progress cinematic renderings 
+							of an original haunted house experience 
+							"Skunk Ape: Slaughter in the Swamp", 
+							made using Unreal Engine 5 and Maya
 						</p>
-						<a href="https://www.youtube.com/watch?v=KCeILSLF2Po"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://www.artstation.com/artwork/xDx3nO "></i></a>
 					</div>
 				</div>
 				<div class="work">
