--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<h1 class="sub-title">My Work</h1>
 			<div class="work-list">
 				<div class="work">
-					<img src="images/work-1.png">
+					<img src="images/swamp.png">
 					<div class="layer">
 						<h3>Skunk Ape: Slaughter in the Swamp</h3>
 						<p>
