--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							"Skunk Ape: Slaughter in the Swamp", 
 							made using Unreal Engine 5 and Maya
 						</p>
-						<a href="https://www.artstation.com/artwork/xDx3nO "></i></a>
+						<a href="https://www.artstation.com/artwork/xDx3nO "><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
