--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 					</div>
 					<div class="tab-contents active-tab" id="skills">
 						<ul>
-							<li><span>Simulation Development</span><br>Unreal Engine 5 and Unity</li>
-							<li><span>Web Development</span><br>Web App</li>
-							<li><span>App Development</span><br>Building apps</li>
+							<li><span>Simulation Development</span><br>Unreal Engine 5, Unity</li>
+							<li><span>Artificial Intelligence</span><br>Python, Java</li>
+							<li><span>Software Engineering</span><br>JavaScript, C/C++, C#</li>
 						</ul>
 					</div>
 					<div class="tab-contents" id="experience">
