--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+esd<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset-"UTF-8">
@@ -60,12 +60,12 @@
 					</div>
 					<div class="tab-contents" id="experience">
 						<ul>
-							<li><span>Spring 2023</span><br>Software Engineer Intern at Universal Creative</li>
+							<li><span>Present</span><br>Simulation Development Intern at Leidos</li>
 							<li>
-								<span>Summer 2021</span><br>Undergraduate Research Assistant at UCF
-								Interactive System and User Experience (ISUE) Lab
+								<span>Spring 2023</span>Software Engineering Intern at Universal Creative (Advanced Technology Interactives)<br>
 							</li>
-							<li><span>2020 - 2021</span><br>Operations Manager at DBS Storage</li>
+							<li><span>Spring 2022</span><br>Undergraduate Research Assistant at UCF
+								Interactive System and User Experience (ISUE) Lab</li>
 						</ul>
 					</div>
 					<div class="tab-contents" id="education">
