--- a/index.html
+++ b/index.html
@@ -82,12 +82,9 @@ esd<!DOCTYPE html>
 				<div class="work">
 					<img src="images/swamp1.png">
 					<div class="layer">
-						<h3>Skunk Ape: Slaughter in the Swamp</h3>
+						<h3>Swamp Environment</h3>
 						<p>
-							Current work in progress cinematic renderings 
-							of an original haunted house experience 
-							"Skunk Ape: Slaughter in the Swamp", 
-							made using Unreal Engine 5 and Maya
+							The following is a render of my Swamp environment created in Unreal Engine 5
 						</p>
 						<a href="https://www.artstation.com/artwork/xDx3nO "><i class="fas fa-external-link-alt"></i></a>
 					</div>
