--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/work-2.gif">
+					<img src="images/raptor.png">
 					<div class="layer">
-						<h3>Spinning Cube</h3>
+						<h3>Raptor Cinematic</h3>
 						<p>
-							Using ASCII characters and matricies in C, I created a spinning cube. The code can be
-							found on my GitHub, Check it out!
+							Coming Soon!
 						</p>
-						<a href="https://github.com/dom-smith/SpinningCube"><i class="fas fa-external-link-alt"></i></a>
+						<a href=""><i class="fas fa-external-link-al"></i></a>
 					</div>
 				</div>
 				<div class="work">
