--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/dino.png">
+					<img src="images/rap.gif">
 					<div class="layer">
 						<h3>Raptor Cinematic</h3>
 						<p>
