--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/rap.gif">
+					<img src="images/ezgif.gif">
 					<div class="layer">
-						<h3>Raptor Cinematic</h3>
+						<h3>Motion Controlled Interative Art</h3>
 						<p>
-							Coming Soon!
+							The following is an interactive art piece using your mobile device as a motion controller built in Unreal Engine 5 using Protokol and ZIG SIM
 						</p>
 						<a href=""><i class="fas fa-external-link-al"></i></a>
 					</div>
