--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<p>
 							The following is an interactive art piece using your mobile device as a motion controller built in Unreal Engine 5 using Protokol and ZIG SIM
 						</p>
-						<a href="https://www.youtube.com/watch?v=GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://github.com/dom-smith/Interactive-Art-Motion-Control"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
