--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 				<div class="about-col-2">
 					<h1 class="sub-title">About Me</h1>
 					<p>
-						Hello World! My name is Dom and I'm a driven and opportunistic
+						Hello World! My name is Dominick Smith and I'm a driven and opportunistic
 						Computer Science student with a passion for Game Design and Simulation at the
-						University of Central Florida on track to graduate in the Spring
-						of 2025. Being humble and maintaining a growth mindset are in constant
-						practice in my life, I always strive to better myself and my peers by
-						utilizing my willingness to learn!
+						University of Central Florida on track to graduate in the 2025. Being humble 
+						and maintaining a growth mindset are in constant practice in my life, I always 
+						strive to better myself and my peers by utilizing my willingness to learn!
 					</p>
 
 					<div class="tab-titles">
@@ -95,6 +94,7 @@
 						<h3>Motion Controlled Interative Art</h3>
 						<p>
 							The following is an interactive art piece using your mobile device as a motion controller built in Unreal Engine 5 using Protokol and ZIG SIM
+							Download below!
 						</p>
 						<a href="https://github.com/dom-smith/Interactive-Art-Motion-Control"><i class="fas fa-external-link-alt"></i></a>
 					</div>
