--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<i class="fa-solid fa-bars" onclick="openmenu()"></i>
 			</nav>
 			<div class="header-text">
-				<p>Computer Scientist</p>
+				<p>Creator</p>
 				<h1>Hi, I'm <span>Dom</span></h1>
 			</div>
 		</div>
@@ -93,8 +93,7 @@
 					<div class="layer">
 						<h3>Motion Controlled Interative Art</h3>
 						<p>
-							The following is an interactive art piece using your mobile device as a motion controller built in Unreal Engine 5 using Protokol and ZIG SIM
-							Download below!
+							The following is an interactive art piece using your mobile device as a motion controller built in Unreal Engine 5 using Protokol and ZIG SIM. Download below!
 						</p>
 						<a href="https://github.com/dom-smith/Interactive-Art-Motion-Control"><i class="fas fa-external-link-alt"></i></a>
 					</div>
