--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p>
 						Hello World! My name is Dominick Smith and I'm a driven and opportunistic
 						Computer Science student with a passion for Game Design and Simulation at the
-						University of Central Florida on track to graduate in the 2025. Being humble 
+						University of Central Florida on track to graduate in 2025. Being humble 
 						and maintaining a growth mindset are in constant practice in my life, I always 
 						strive to better myself and my peers by utilizing my willingness to learn!
 					</p>
