--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="tab-contents" id="experience">
 						<ul>
 							<li><span>Present</span><br>Simulation Development Intern at Leidos</li>
-							<li><span>Spring 2023</span><br>Software Engineering Intern at Universal Creative (Advanced Technology Interactives)</li>
+							<li><span>Spring 2023</span><br>Technical Intern (Software) at Universal Creative (Advanced Technology Interactives)</li>
 							<li><span>Spring 2022</span><br>Undergraduate Research Assistant at UCF Interactive System and User Experience (ISUE) Lab</li>
 						</ul>
 					</div>
