--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 					</div>
 					<div class="tab-contents active-tab" id="skills">
 						<ul>
-							<li><span>Simulation Development</span><br>Unreal Engine 5, Unity</li>
-							<li><span>Artificial Intelligence</span><br>Python, Java</li>
-							<li><span>Software Engineering</span><br>JavaScript, C/C++, C#</li>
+							<li><span>Simulation/Game Development</span><br>Unreal Engine 5, Unity, Maya, Blender</li>
+							<li><span>Artificial Intelligence</span><br>PyTorch, TensorFlow</li>
+							<li><span>Software Engineering</span><br>C/C++, C#, Java, Python</li>
 						</ul>
 					</div>
 					<div class="tab-contents" id="experience">
@@ -66,7 +66,7 @@
 					</div>
 					<div class="tab-contents" id="education">
 						<ul>
-							<li><span>2021 - 2025</span><br>BS in Computer Science at the University of Central Florida</li>
+							<li><span>2021 - 2025</span><br>B.S. in Computer Science at the University of Central Florida</li>
 						</ul>
 					</div>
 				</div>
