--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/rap.gif">
+					<img src="images/tundra.jpeg">
 					<div class="layer">
-						<h3>Coming Soon!</h3>
+						<h3>Tundra Environment</h3>
 						<p>
-						
+							Tundra environment built using Blender and Unreal Engine
 						</p>
-						<a href="https://www.youtube.com/watch?v=GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://youtu.be/GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 			</div>
