--- a/index.html
+++ b/index.html
@@ -109,6 +109,39 @@
 					</div>
 				</div>
 			</div>
+			<!-- Second row of projects -->
+			<div class="work-list">
+				<div class="work">
+					<img src="images/project4.jpg">
+					<div class="layer">
+						<h3>Project 4 Title</h3>
+						<p>
+							Project 4 description - replace with your content
+						</p>
+						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/project5.jpg">
+					<div class="layer">
+						<h3>Project 5 Title</h3>
+						<p>
+							Project 5 description - replace with your content
+						</p>
+						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/project6.jpg">
+					<div class="layer">
+						<h3>Project 6 Title</h3>
+						<p>
+							Project 6 description - replace with your content
+						</p>
+						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
+			</div>
 			<a href="https://github.com/dom-smith?tab=repositories" class="btn">See More</a>
 		</div>
 	</div>
