--- a/index.html
+++ b/index.html
@@ -99,26 +99,26 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/tundra.jpeg">
+					<img src="images/plugin.jpg">
 					<div class="layer">
-						<h3>Tundra Environment</h3>
+						<h3>Ghost - An UE5 Plugin</h3>
 						<p>
-							Tundra environment built using Blender and Unreal Engine
+							Plugin for Unreal Engine 5 that lets you record an Actor’s transform at runtime or PIE and instantly replay it as a “ghost” path.
 						</p>
-						<a href="https://youtu.be/GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://github.com/dom-smith/Ghost"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 			</div>
 			<!-- Second row of projects -->
 			<div class="work-list">
 				<div class="work">
-					<img src="images/project4.jpg">
+					<img src="images/tundra.jpeg">
 					<div class="layer">
-						<h3>Project 4 Title</h3>
+						<h3>Tundra Environment</h3>
 						<p>
-							Project 4 description - replace with your content
+							Tundra environment built using Blender and Unreal Engine
 						</p>
-						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+						<a href="#"><i class="https://youtu.be/GBX14yhJ_Ek"></i></a>
 					</div>
 				</div>
 				<div class="work">
