--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<p>
 							Tundra environment built using Blender and Unreal Engine
 						</p>
-						<a href="#"><i class="https://youtu.be/GBX14yhJ_Ek"></i></a>
+						<a href="https://youtu.be/GBX14yhJ_Ek"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
