--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="work">
 					<img src="images/plugin.jpg">
 					<div class="layer">
-						<h3>Ghost - An UE5 Plugin</h3>
+						<h3>Ghost - A UE5 Plugin</h3>
 						<p>
 							Plugin for Unreal Engine 5 that lets you record an Actor’s transform at runtime or PIE and instantly replay it as a “ghost” path.
 						</p>
@@ -122,21 +122,21 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/project5.jpg">
+					<img src="images/pointcloud.jpg">
 					<div class="layer">
-						<h3>Project 5 Title</h3>
+						<h3>Interactive 3D Point Cloud</h3>
 						<p>
-							Project 5 description - replace with your content
+							Audio Reactive 3D Point Cloud using TouchDesigner
 						</p>
 						<a href="#"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/project6.jpg">
+					<img src="images/boid.gif">
 					<div class="layer">
-						<h3>Project 6 Title</h3>
+						<h3>Boids in Unity</h3>
 						<p>
-							Project 6 description - replace with your content
+							Demo of the Boids Flocking Algorithm in Unity. Download from my GitHub below!
 						</p>
 						<a href="#"><i class="fas fa-external-link-alt"></i></a>
 					</div>
