--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
 				<div class="about-col-2">
 					<h1 class="sub-title">About Me</h1>
 					<p>
-						Hello World! My name is Dominick Smith and I'm a driven and opportunistic
-						Computer Science student with a passion for Game Design and Simulation at the
-						University of Central Florida on track to graduate in 2025. Being humble 
-						and maintaining a growth mindset are in constant practice in my life, I always 
-						strive to better myself and my peers by utilizing my willingness to learn!
+						Hello World! My name is Dominick Smith and I'm a Computer Science student
+						at the University of Central Florida on track to graduate in 2026. I was
+						born and raised right here in Orlando, Florida and ever since a young age
+						I've had a passion for story telling and interactive design. I'm also
+						currently a Simulation Development Intern at Leidos' Internal R&D Team,
+						building pre-viz training and prototype simulation tools for clients across a plethora of industries.
+
+						When I'm not in school or working, you can find me reading novels, traveling,
+						bouldering, surfing, photgraphing the world, and of course, playing video games!
 					</p>
 
 					<div class="tab-titles">
