--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/pointcloud.jpg">
+					<img src="images/TD.gif">
 					<div class="layer">
 						<h3>Interactive 3D Point Cloud</h3>
 						<p>
 							Audio Reactive 3D Point Cloud using TouchDesigner
 						</p>
-						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://youtu.be/8XBBt4JORpo"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
@@ -142,7 +142,7 @@
 						<p>
 							Demo of the Boids Flocking Algorithm in Unity. Download from my GitHub below!
 						</p>
-						<a href="#"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://github.com/dom-smith/Boids"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 			</div>
