--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/boid.gif">
+					<img src="images/model.jpg">
 					<div class="layer">
-						<h3>Boids in Unity</h3>
+						<h3>Operation Aerolith *Work In Progress*</h3>
 						<p>
-							Demo of the Boids Flocking Algorithm in Unity. Download from my GitHub below!
+							Pre-vis mode and animation made in Maya for an upcoming VR dark-ride experience I'm building in UE5! Exremely early in development but still wanted to share! You can keep up
+							with the project by checking it out on ArtStation (link below)!
 						</p>
-						<a href="https://github.com/dom-smith/Boids"><i class="fas fa-external-link-alt"></i></a>
+						<a href="https://www.artstation.com/artwork/JrVE4v"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 			</div>
