--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/model.jpg">
+					<img src="images/rideveh.gif">
 					<div class="layer">
 						<h3>Operation Aerolith *Work In Progress*</h3>
 						<p>
