--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/TD.gif">
+					<img src="images/tede.gif">
 					<div class="layer">
 						<h3>Interactive 3D Point Cloud</h3>
 						<p>
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 				<div class="work">
-					<img src="images/rideveh.gif">
+					<img src="images/ridevehicle.gif">
 					<div class="layer">
 						<h3>Operation Aerolith *Work In Progress*</h3>
 						<p>
